--- a/kubernetes/apps/default/baserow/app/asgi.yaml
+++ b/kubernetes/apps/default/baserow/app/asgi.yaml
@@ -35,6 +35,9 @@ spec:
           http:
             port: 80
             targetPort: 8000
+    envFrom:
+      - secretRef:
+          name: baserow-secret
     image:
       repository: docker.io/baserow/backend
       tag: 1.20.2
@@ -76,17 +79,6 @@ spec:
   upgrade:
     remediation:
       retries: 5
-  # affinity:
-  #   podAntiAffinity:
-  #     preferredDuringSchedulingIgnoredDuringExecution:
-  #       - weight: 1
-  #         podAffinityTerm:
-  #           labelSelector:
-  #             matchExpressions:
-  #               - key: app
-  #                 operator: In
-  #                 values:
-  #                   - backend-wsgi
   values:
     controller:
       replicas: 1
@@ -97,10 +89,16 @@ spec:
           http:
             port: 80
             targetPort: 8000
+    envFrom:
+      - secretRef:
+          name: baserow-secret
     image:
       repository: docker.io/baserow/backend
       tag: 1.20.2
-      args: ["gunicorn"]
+      args:
+        - "gunicorn-wsgi"
+        - "--timeout"
+        - "60"
       # ports:
       #   - containerPort: 8000
       #     name: backend-asgi
