--- a/kubernetes/apps/default/baserow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/baserow/app/helmrelease.yaml
@@ -35,6 +35,9 @@ spec:
           http:
             port: 80
             targetPort: 8000
+    envFrom:
+      - secretRef:
+          name: baserow-secret
     image:
       repository: docker.io/baserow/backend
       tag: 1.20.2
@@ -76,17 +79,6 @@ spec:
   upgrade:
     remediation:
       retries: 5
-  # affinity:
-  #   podAntiAffinity:
-  #     preferredDuringSchedulingIgnoredDuringExecution:
-  #       - weight: 1
-  #         podAffinityTerm:
-  #           labelSelector:
-  #             matchExpressions:
-  #               - key: app
-  #                 operator: In
-  #                 values:
-  #                   - backend-wsgi
   values:
     controller:
       replicas: 1
@@ -97,10 +89,73 @@ spec:
           http:
             port: 80
             targetPort: 8000
+    envFrom:
+      - secretRef:
+          name: baserow-secret
     image:
       repository: docker.io/baserow/backend
       tag: 1.20.2
-      args: ["gunicorn"]
+      args:
+        - "gunicorn-wsgi"
+        - "--timeout"
+        - "60"
+      # ports:
+      #   - containerPort: 8000
+      #     name: backend-asgi
+      probes:
+        readiness:
+          custom: true
+          spec:
+            httpGet:
+              path: /api/_health/
+              port: 8000
+---
+# A set of celery workers handling realtime events, cleanup, async tasks etc.
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: baserow-backend-worker
+  namespace: default
+  labels:
+    app: baserow-backend-worker
+spec:
+  interval: 15m
+  chart:
+    spec:
+      chart: app-template
+      version: 1.5.1
+      sourceRef:
+        kind: HelmRepository
+        name: bjw-s
+        namespace: flux-system
+      interval: 15m
+  maxHistory: 3
+  install:
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
+  values:
+    controller:
+      replicas: 2
+    service:
+      type: ClusterIP
+      main:
+        ports:
+          http:
+            port: 80
+            targetPort: 8000
+    envFrom:
+      - secretRef:
+          name: baserow-secret
+    image:
+      repository: docker.io/baserow/backend
+      tag: 1.20.2
+      args:
+        - "gunicorn-wsgi"
+        - "--timeout"
+        - "60"
       # ports:
       #   - containerPort: 8000
       #     name: backend-asgi
