--- a/kubernetes/apps/default/baserow/app/deploy1.yaml
+++ b/kubernetes/apps/default/baserow/app/deploy1.yaml
@@ -33,6 +33,9 @@ spec:
   #             tag: 1.20.2
   #             # -- image pull policy
   #             pullPolicy: IfNotPresent
+  #           workingDir: /baserow
+  #           args:
+  #             - "gunicorn"
 
   #           # -- environment variables.
   #           # See [image docs](https://github.com/dani-garcia/vaultwarden/blob/main/.env.template) for more details.
@@ -71,8 +74,8 @@ spec:
               - secretRef:
                   name: baserow-secret
     service:
-      type: ClusterIP
       main:
+        type: ClusterIP
         ports:
           http:
             port: 80
