--- a/kubernetes/apps/default/baserow/app/deploy3.yaml
+++ b/kubernetes/apps/default/baserow/app/deploy3.yaml
@@ -32,3 +32,8 @@ spec:
             image:
               repository: docker.io/traefik/whoami
               tag: latest
+    service:
+      main:
+        ports:
+          http:
+            port: 80
