--- a/kubernetes/apps/default/baserow/app/deploy3.yaml
+++ b/kubernetes/apps/default/baserow/app/deploy3.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: whoami2
+  name: http-echos
   namespace: default
 spec:
   interval: 15m
@@ -15,24 +15,15 @@ spec:
         name: bjw-s
         namespace: flux-system
       interval: 15m
-  maxHistory: 3
-  install:
-    remediation:
-      retries: 5
-  upgrade:
-    remediation:
-      retries: 5
   values:
     controllers:
       main:
-        strategy: Recreate
         containers:
           main:
             image:
-              repository: docker.io/traefik/whoami
-              tag: latest
-    service:
-      main:
-        ports:
-          http:
-            port: 80
+              repository: ghcr.io/mendhak/http-https-echo
+              tag: 30
+              pullPolicy: IfNotPresent
+            env:
+              HTTP_PORT: 8887
+              HTTPS_PORT: 9997
