--- a/kubernetes/apps/default/baserow/app/deploy1.yaml
+++ b/kubernetes/apps/default/baserow/app/deploy1.yaml
@@ -23,14 +23,11 @@ spec:
       main:
         containers:
           main:
+            order: 1
             image:
-              # -- image repository
-              - repository: baserow/backend
-              # -- image tag
-              # this example is not automatically updated, so be sure to use the latest image
-                tag: 1.20.2
-              # -- image pull policy
-                pullPolicy: IfNotPresent
+              repository: baserow/backend
+              tag: 1.20.2
+              pullPolicy: IfNotPresent
             workingDir: /baserow
             args:
               - "gunicorn"
