--- a/kubernetes/apps/default/baserow/app/baserow.yaml
+++ b/kubernetes/apps/default/baserow/app/baserow.yaml
@@ -4,51 +4,49 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: balancer
+  name: baserow
+  namespace: default
   annotations:
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "route"
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
     nginx.ingress.kubernetes.io/proxy-body-size: 20m
-    kubernetes.io/ingress.class: nginx
     # removed ssl settings, add in your own desired ones
 spec:
-  # TODO a tsl block
+  ingressClassName: internal
   rules:
-    - host: REPLACE_WITH_YOUR_BACKEND_HOST
+    - host: "brbackend.${SECRET_DOMAIN}"
       http:
         paths:
-          - pathType: Prefix
-            path: "/ws/"
-            backend:
-              service:
-                name: backend-asgi
-                port:
-                  number: 80
-          - pathType: Prefix
-            path: "/"
+          - path: "/ws/"
+            pathType: Prefix
             backend:
               service:
                 name: backend-wsgi
                 port:
                   number: 80
-    - host: REPLACE_WITH_YOUR_WEB_FRONTEND_HOST
+    - host: "baserow.${SECRET_DOMAIN2}"
       http:
         paths:
-          - pathType: Prefix
-            path: "/"
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: web-frontend
                 port:
                   number: 80
+  tls:
+    - hosts:
+        - "brbackend.${SECRET_DOMAIN}"
+        - "baserow.${SECRET_DOMAIN2}"
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: backend-asgi
+  namespace: default
 spec:
   type: ClusterIP
   ports:
@@ -61,6 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-wsgi
+  namespace: default
 spec:
   type: ClusterIP
   ports:
@@ -73,6 +72,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web-frontend
+  namespace: default
 spec:
   type: ClusterIP
   ports:
@@ -87,6 +87,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-asgi
+  namespace: default
   labels:
     app: backend-asgi
 spec:
@@ -142,6 +143,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-wsgi
+  namespace: default
   labels:
     app: backend-wsgi
 spec:
@@ -191,15 +193,14 @@ spec:
             successThreshold: 1
           envFrom:
             - secretRef:
-                name: YOUR_ENV_SECRET_REF
-      imagePullSecrets:
-        - name: YOUR_PULL_SECRETS
+                name: baserow-secret
 # A set of celery workers handling realtime events, cleanup, async tasks etc.
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-worker
+  namespace: default
   labels:
     app: backend-worker
 spec:
@@ -242,7 +243,7 @@ spec:
             periodSeconds: 10
           envFrom:
             - secretRef:
-                name: YOUR_ENV_SECRET_REF
+                name: baserow-secret
         - name: backend-export-worker
           image: baserow/backend:1.20.2
           args:
@@ -259,7 +260,7 @@ spec:
             periodSeconds: 10
           envFrom:
             - secretRef:
-                name: YOUR_ENV_SECRET_REF
+                name: baserow-secret
         - name: backend-beat-worker
           image: baserow/backend:1.20.2
           args:
@@ -267,15 +268,14 @@ spec:
           imagePullPolicy: Always
           envFrom:
             - secretRef:
-                name: YOUR_ENV_SECRET_REF
-      imagePullSecrets:
-        - name: YOUR_PULL_SECRETS
+                name: baserow-secret
 # A web-frontend SSR server which renders the initial html/js when a client visits.
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: web-frontend
+  namespace: default
   labels:
     app: web-frontend
 spec:
@@ -318,6 +318,4 @@ spec:
             successThreshold: 1
           envFrom:
             - secretRef:
-                name: YOUR_ENV_SECRET_REF
-      imagePullSecrets:
-        - name: YOUR_PULL_SECRETS
+                name: baserow-secret
