--- a/kubernetes/apps/default/baserow/app/kustomization.yaml
+++ b/kubernetes/apps/default/baserow/app/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-  - ./deploy1.yaml
+  - ./baserow2.yaml
 #  - ./wsgi.yaml
