--- a/kubernetes/apps/default/baserow/app/baserow2.yaml
+++ b/kubernetes/apps/default/baserow/app/baserow2.yaml
@@ -605,13 +605,13 @@ spec:
         # -- Name of the database to use
         database: baserow
         # -- Name of existing secret to use for PostgreSQL credentials
-        existingSecret: ""
+     #   existingSecret: ""
         # -- Password to use
         password: ${DATABASE_PASSWORD}
         # -- Name of the user to use
         username: ${DATABASE_USER}
         # -- Key in the secret containing the password
-        userPasswordKey: ""
+   #     userPasswordKey: ""
       # -- Hostname of the PostgreSQL database
       hostname: ${DATABASE_HOST}
       # -- Port used to connect to PostgreSQL database
@@ -633,11 +633,11 @@ spec:
         # -- if authentication should be used with external Redis™
         enabled: true
         # -- Name of existing secret to use for Redis™ credentials
-        existingSecret: ""
+       # existingSecret: ""
         # -- Password to use
         password: ${REDIS_PASSWORD}
         # -- Key in the secret containing the password
-        userPasswordKey: ""
+    #    userPasswordKey: ""
       # -- Hostname of Redis™
       hostname: ${REDIS_HOST}
       # -- Port used to connect to Redis
