--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
- # - ./baserow/ks.yaml
+  - ./baserow/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./n8n/ks.yaml
