--- a/kubernetes/apps/default/baserow/app/baserow2.yaml
+++ b/kubernetes/apps/default/baserow/app/baserow2.yaml
@@ -583,9 +583,9 @@ spec:
       # -- Controls how many application snapshots can be created per group.
       maxSnapshotsPerGroup: "-1"
       # -- The publicly accessible URL of the backend. Should include the port if non-standard.
-      publicBackendUrl: ""
+      publicBackendUrl: "http://baserow.${SECRET_DOMAIN}"
       # -- The publicly accessible URL of the frontend. Should include the port if non-standard.
-      publicFrontendUrl: ""
+      publicFrontendUrl: "http://brbackend.${SECRET_DOMAIN}"
 
     postgresql:
       # -- enable PostgreSQL™ subchart from Bitnami
