--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./home-assistant/ks.yaml
   - ./n8n/ks.yaml
   - ./postgresql/ks.yaml
-  - ./redis/ks.yaml
-  - ./redisinsight/ks.yaml
+  # - ./redis/ks.yaml
+  # - ./redisinsight/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
