--- a/kubernetes/apps/networking/echo-server/app/helm2.yaml
+++ b/kubernetes/apps/networking/echo-server/app/helm2.yaml
@@ -1,10 +1,9 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: echo-server
-  namespace: networking
+  namespace: network
 spec:
   interval: 30m
   chart:
@@ -38,6 +37,7 @@ spec:
                 memory: 30M
               limits:
                 memory: 30M
+
     service:
       main:
         ports:
@@ -47,25 +47,20 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: external
+        className: "external-nginx"
         annotations:
-          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
-          nginx.ingress.kubernetes.io/auth-method: GET
-          nginx.ingress.kubernetes.io/auth-url: http://authelia.networking.svc.cluster.local/api/verify
-          nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}?rm=$request_method
-          nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
-          nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
-          hajimari.io/icon: video-input-antenna
+          external-dns.alpha.kubernetes.io/target: ingress-ext.bjw-s.dev
+          nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-external-proxy-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
+          nginx.ingress.kubernetes.io/auth-signin: /outpost.goauthentik.io/start?rd=$escaped_request_uri
+          nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
+          nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
         hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: &host "echo-server.bjw-s.dev"
             paths:
               - path: /
-                pathType: Prefix
-          - host: &host2 "{{ .Release.Name }}.${SECRET_DOMAIN2}"
-            paths:
-              - path: /
-                pathType: Prefix
+                service:
+                  name: main
+                  port: http
         tls:
           - hosts:
               - *host
-              - *host2
