--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ./namespace.yaml
   - ./authelia/ks.yaml
   - ./cloudflared/ks.yaml
-  - ./echo-server/ks.yaml
+ # - ./echo-server/ks.yaml
   - ./external-dns/ks.yaml
   - ./k8s-gateway/ks.yaml
   - ./nginx/ks.yaml
