--- a/kubernetes/apps/default/appsmith/app/helmrelease.yaml
+++ b/kubernetes/apps/default/appsmith/app/helmrelease.yaml
@@ -231,8 +231,15 @@ spec:
 
     tolerations: []
 
-    affinity: {}
-
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - amd64
     persistence:
       ## @param persistence.enabled - Enable data persistence using PVC
       ##
