--- a/kubernetes/apps/default/appsmith/app/helmrelease.yaml
+++ b/kubernetes/apps/default/appsmith/app/helmrelease.yaml
@@ -109,7 +109,7 @@ spec:
       pullSecrets: []
       ## Enable debug mode
       ##
-      debug: false
+      debug: true
 
     ## @section Appsmith Client Parameters
     ##
