--- a/kubernetes/apps/default/mongodb/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mongodb/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
     persistence:
       existingClaim: pvc-mongodb
     auth:
-      enabled: false
+      enabled: true
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
