--- a/kubernetes/apps/default/mongodb/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mongodb/app/helmrelease.yaml
@@ -27,6 +27,12 @@ spec:
       existingClaim: pvc-mongodb
     auth:
       enabled: true
+    service:
+      annotations:
+        io.cilium/lb-ipam-ips: "192.168.2.47"
+      externalTrafficPolicy: Cluster
+      # clusterIP: "192.168.2.49"
+      type: LoadBalancer
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
