--- a/kubernetes/apps/default/mongodb/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mongodb/app/helmrelease.yaml
@@ -33,6 +33,10 @@ spec:
       externalTrafficPolicy: Cluster
       # clusterIP: "192.168.2.49"
       type: LoadBalancer
+    externalAccess:
+      enabled: true
+      service:
+        type: LoadBalancer
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
