--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./baserow/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  - ./mongodb/ks.yaml
+ # - ./mongodb/ks.yaml
   - ./n8n/ks.yaml
   - ./postgresql/ks.yaml
   - ./redis/ks.yaml
