--- a/kubernetes/apps/default/mongodb/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mongodb/app/helmrelease.yaml
@@ -27,6 +27,8 @@ spec:
       existingClaim: pvc-mongodb
     auth:
       enabled: true
+      rootUser: root
+      rootPassword: mongo
     service:
       annotations:
         io.cilium/lb-ipam-ips: "192.168.2.47"
