--- a/kubernetes/apps/default/mongodb/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mongodb/app/helmrelease.yaml
@@ -26,9 +26,16 @@ spec:
     persistence:
       existingClaim: pvc-mongodb
     auth:
+      databases:
+        - appsmith
+      directoryPerDB: true
       enabled: true
       rootUser: root
       rootPassword: mongo
+      usernames:
+        - appsmith
+      passwords:
+        - appsmith
     service:
       annotations:
         io.cilium/lb-ipam-ips: "192.168.2.47"
