--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ./kubernetes-dashboard.yaml
   - ./metrics-server.yaml
   - ./prometheus-community.yaml
+  - ./retool.yaml
   - ./runix.yaml
   - ./stakater.yaml
   - ./vector.yaml
