--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./appsmith.yaml
   - ./authelia.yaml
   - ./baserow.yaml
+  - ./budibase.yaml
   - ./bitnami.yaml
   - ./bjw-s.yaml
   - ./cilium.yaml
