--- a/kubernetes/apps/default/budibase/app/helmrelease.yaml
+++ b/kubernetes/apps/default/budibase/app/helmrelease.yaml
@@ -59,7 +59,7 @@ spec:
     ingress:
       enabled: true
       aws: false
-      nginx: true
+      #nginx: true
       certificateArn: ""
       className: "internal"
       annotations:
